--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
     api:
-        image: ghcr.io/engineer-man/piston
+        image: piston_for_coding_web_project_v4
         container_name: piston_api
         restart: always
         ports:
