--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,26 @@
 {
-    "name": "piston-api",
-    "version": "3.1.1",
-    "description": "API for piston - a high performance code execution engine",
-    "main": "src/index.js",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "chownr": "^2.0.0",
-        "express": "^4.17.3",
-        "express-ws": "^5.0.2",
-        "is-docker": "^2.1.1",
-        "logplease": "^1.2.15",
-        "nocamel": "HexF/nocamel#patch-1",
-        "node-fetch": "^2.6.1",
-        "semver": "^7.3.4",
-        "uuid": "^8.3.2",
-        "waitpid": "git+https://github.com/HexF/node-waitpid.git"
-    },
-    "license": "MIT"
+  "name": "piston-api",
+  "version": "3.1.1",
+  "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT",
+  "description": "",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.11.1",
+    "@grpc/proto-loader": "^0.7.13",
+    "body-parser": "^1.20.2",
+    "chownr": "^3.0.0",
+    "express": "^4.19.2",
+    "express-ws": "^5.0.2",
+    "is-docker": "^3.0.0",
+    "logplease": "^1.2.15",
+    "nocamel": "^1.0.2",
+    "node-fetch": "^3.3.2",
+    "semver": "^7.6.3",
+    "uuid": "^10.0.0",
+    "waitpid": "git+https://github.com/HexF/node-waitpid.git"
+  }
 }
