--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
-version: '3.2'
+version: '3.3'
 
 services:
     api:
-        image: piston_for_coding_web_project_bata_v4
+        image: piston_coding_web_v10
         container_name: piston_api
         restart: always
         ports:
-            - 2000:2000
+            - 50051:50051
         volumes:
             - ./data/piston/packages:/piston/packages
         tmpfs:
